<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="ch.kra.trek.viewmodel.TrekViewModel" />

        <variable
            name="trekInfoFragment"
            type="ch.kra.trek.ui.TrekInfoFragment" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="TO BE REPLACED BY MAP"
            android:layout_weight="0.5"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            tools:context=".ui.TrekInfoFragment">

            <TextView
                android:id="@+id/lbl_time_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_time_header_text"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/lbl_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{Long.toString(viewModel.trekWithCoordinates.trek.time)}"
                app:layout_constraintTop_toBottomOf="@id/lbl_time_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="2:35 h"/>

            <View
                android:id="@+id/divider_time"
                style="@style/Divider"
                app:layout_constraintTop_toBottomOf="@id/lbl_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/lbl_km_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_km_header_text"
                app:layout_constraintTop_toBottomOf="@id/divider_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/lbl_km"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{Double.toString(viewModel.trekWithCoordinates.trek.km)}"
                app:layout_constraintTop_toBottomOf="@id/lbl_km_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="30.5"/>

            <View
                android:id="@+id/divider_km"
                style="@style/Divider"
                app:layout_constraintTop_toBottomOf="@id/lbl_km"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/lbl_max_drop_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_max_drop_text"
                app:layout_constraintTop_toBottomOf="@id/divider_km"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/lbl_max_drop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{Double.toString(viewModel.trekWithCoordinates.trek.maxDrop)}"
                app:layout_constraintTop_toBottomOf="@id/lbl_max_drop_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="250 m"/>

            <View
                android:id="@+id/divider_max_drop"
                style="@style/Divider"
                app:layout_constraintTop_toBottomOf="@id/lbl_max_drop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/lbl_total_drop_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_total_drop_text"
                app:layout_constraintTop_toBottomOf="@id/divider_max_drop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/lbl_total_drop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{Double.toString(viewModel.trekWithCoordinates.trek.totalDrop)}"
                app:layout_constraintTop_toBottomOf="@id/lbl_total_drop_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="450 m"/>

            <View
                android:id="@+id/divider_total_drop"
                style="@style/Divider"
                app:layout_constraintTop_toBottomOf="@id/lbl_total_drop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/btn_save_trek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/btn_save_trek_text"
                android:onClick="@{() -> trekInfoFragment.saveTrek()}"
                app:layout_constraintTop_toBottomOf="@id/divider_total_drop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/btn_delete_trek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/btn_delete_trek_text"
                android:onClick="@{() -> trekInfoFragment.deleteTrek()}"
                app:layout_constraintTop_toBottomOf="@id/btn_save_trek"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/lbl_coordinates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewModel.trekWithCoordinates.coordinates.toString()}"
                app:layout_constraintTop_toBottomOf="@id/btn_delete_trek"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>